--- a/graduation/proj.win32/graduation.win32.vcxproj.filters
+++ b/graduation/proj.win32/graduation.win32.vcxproj.filters
@@ -9,12 +9,6 @@
       <UniqueIdentifier>{3b1688fe-2a76-4013-8ffe-67cc1a87a0ad}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl;inc</Extensions>
     </Filter>
-    <Filter Include="Classes\AngryBird">
-      <UniqueIdentifier>{3fff4b43-bf8e-4e8c-87a1-881f67883122}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Classes\Automobile">
-      <UniqueIdentifier>{913c76e7-abee-417b-b18f-45403538dd53}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Classes\PhysicsWorld">
       <UniqueIdentifier>{59a5d2d6-b9f2-4b43-ab31-ee611a947d7a}</UniqueIdentifier>
     </Filter>
@@ -49,6 +43,12 @@
     <Filter Include="Classes\MainMenuScene">
       <UniqueIdentifier>{545ef14a-aa47-4d5a-81c9-d02b21c32f84}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Classes\AngryBirdScene">
+      <UniqueIdentifier>{3fff4b43-bf8e-4e8c-87a1-881f67883122}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes\AutomobileScene">
+      <UniqueIdentifier>{913c76e7-abee-417b-b18f-45403538dd53}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\graduation.ico">
@@ -74,16 +74,16 @@
       <Filter>Classes</Filter>
     </ClInclude>
     <ClInclude Include="AngryBirdScene.h">
-      <Filter>Classes\AngryBird</Filter>
+      <Filter>Classes\AngryBirdScene</Filter>
     </ClInclude>
     <ClInclude Include="BirdSprite.h">
-      <Filter>Classes\AngryBird</Filter>
+      <Filter>Classes\AngryBirdScene</Filter>
     </ClInclude>
     <ClInclude Include="SlingSprite.h">
-      <Filter>Classes\AngryBird</Filter>
+      <Filter>Classes\AngryBirdScene</Filter>
     </ClInclude>
     <ClInclude Include="AutomobileScene.h">
-      <Filter>Classes\Automobile</Filter>
+      <Filter>Classes\AutomobileScene</Filter>
     </ClInclude>
     <ClInclude Include="BodyUserData.h">
       <Filter>Classes\PhysicsWorld</Filter>
@@ -142,7 +142,7 @@
       <Filter>Classes\GearJointScene</Filter>
     </ClCompile>
     <ClCompile Include="AutomobileScene.cpp">
-      <Filter>Classes\Automobile</Filter>
+      <Filter>Classes\AutomobileScene</Filter>
     </ClCompile>
     <ClCompile Include="PulleyScene.cpp">
       <Filter>Classes\PulleyJointScene</Filter>
@@ -154,13 +154,13 @@
       <Filter>Classes\PhysicsWorld</Filter>
     </ClCompile>
     <ClCompile Include="AngryBirdScene.cpp">
-      <Filter>Classes\AngryBird</Filter>
+      <Filter>Classes\AngryBirdScene</Filter>
     </ClCompile>
     <ClCompile Include="BirdSprite.cpp">
-      <Filter>Classes\AngryBird</Filter>
+      <Filter>Classes\AngryBirdScene</Filter>
     </ClCompile>
     <ClCompile Include="SlingSprite.cpp">
-      <Filter>Classes\AngryBird</Filter>
+      <Filter>Classes\AngryBirdScene</Filter>
     </ClCompile>
     <ClCompile Include="CustomeContactListener.cpp">
       <Filter>Classes\PhysicsWorld</Filter>
